# ML-Analytics

./: README.md  app.py  pyproject.toml
static/css/: style.css
utils/: __init__.py  interpretation.py  models.py  preprocessing.py  visualization.py
