[project]
name = "student-dropout-prediction"
version = "0.1.0"
description = "Interactive Machine Learning Web Application for Student Dropout Prediction"
authors = [
    { name = "ML Project Team", email = "team@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["machine learning", "streamlit", "education", "prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core ML libraries
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.7.0",
    
    # Visualization
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # Web framework
    "streamlit>=1.28.0",
    
    # Model interpretation
    "shap>=0.42.0",
    "lime>=0.2.0",
    
    # Data handling
    "openpyxl>=3.0.9",
    "xlrd>=2.0.1",
    
    # Progress bars
    "tqdm>=4.64.0",
    
    # Additional utilities
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/student_dropout"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "streamlit>=1.40.1",
]
